webapp/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp
  labels:
    app: aks-learn-webapp
