webapp/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-learn-webapp
  labels:
    app: aks-learn-webapp
spec:
  selector:
    app: aks-learn-webapp
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: ClusterIP
