webapp/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-learn-webapp
  labels:
    app: aks-learn-webapp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: aks-learn-webapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aks-learn-webapp
            port:
              number: 80
